[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/Help.tscn" type="PackedScene" id=1]
[ext_resource path="res://Multiplayer/Multiplayer.gd" type="Script" id=9]
[ext_resource path="res://HeadUpDisplay/PointsHeadUpDisplay.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/fonts/KellySlab-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://addons/RadialMenu/RadialMenu.gd" type="Script" id=12]
[ext_resource path="res://addons/RadialMenu/light_default_theme.tres" type="Theme" id=13]

[sub_resource type="Animation" id=1]
length = 0.001

[sub_resource type="Animation" id=2]
resource_name = "Schüttelbewegung Links"

[sub_resource type="Animation" id=3]
resource_name = "Schüttelbewegung Rechts"

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 11 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
"anims/Schüttelbewegung Links" = SubResource( 2 )
"anims/Schüttelbewegung Rechts" = SubResource( 3 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
"anims/Schüttelbewegung Rechts" = SubResource( 3 )

[node name="Control" parent="." instance=ExtResource( 10 )]
margin_bottom = -956.0

[node name="HBoxContainer" parent="Control/VBoxContainer" index="0"]
margin_bottom = 0.0

[node name="Playerpoints" parent="Control/VBoxContainer/HBoxContainer" index="0"]
margin_bottom = 0.0

[node name="Enemypoints" parent="Control/VBoxContainer/HBoxContainer" index="1"]
margin_bottom = 0.0

[node name="MarginContainer" parent="Control/VBoxContainer" index="1"]
margin_top = 4.0
margin_bottom = 904.0

[node name="StartGameButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.5
margin_top = -39.5
margin_right = 150.5
margin_bottom = 39.5
custom_fonts/font = SubResource( 4 )
text = "Start Game"

[node name="NextRoundButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -159.0
margin_top = -39.5
margin_right = 159.0
margin_bottom = 39.5
custom_fonts/font = SubResource( 4 )
text = "Next Round"

[node name="NewGameButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -159.0
margin_top = -39.5
margin_right = 159.0
margin_bottom = 39.5
custom_fonts/font = SubResource( 4 )
text = "New Game"

[node name="YouWinLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -129.5
margin_top = -190.0
margin_right = 129.5
margin_bottom = -117.0
custom_fonts/font = SubResource( 4 )
text = "YOU WIN!"
align = 1
valign = 1

[node name="YouLooseLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -153.5
margin_top = -190.0
margin_right = 153.5
margin_bottom = -117.0
custom_fonts/font = SubResource( 4 )
text = "YOU LOOSE!"

[node name="PlayerCountReadyLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -59.0
margin_top = 52.0
margin_right = 57.0
margin_bottom = 111.0
custom_fonts/font = SubResource( 5 )
text = "(1/2...)"
align = 1
valign = 1

[node name="PlayerNamesHUD" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -49.0

[node name="Player_1_Name" type="Label" parent="PlayerNamesHUD"]
margin_right = 637.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
valign = 1

[node name="vs" type="Label" parent="PlayerNamesHUD"]
margin_left = 641.0
margin_right = 1278.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "vs."
align = 1
valign = 1

[node name="Player_2_Name" type="Label" parent="PlayerNamesHUD"]
margin_left = 1282.0
margin_right = 1920.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 5 )
align = 2
valign = 1

[node name="WaitingforPlayerLabel" type="Label" parent="."]
margin_left = 181.0
margin_top = 28.0
margin_right = 915.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 5 )
text = "Waiting for second Player..."

[node name="PlayerHandMenu" type="Popup" parent="."]
visible = true
margin_left = 213.0
margin_top = 226.0
margin_right = 813.0
margin_bottom = 826.0
rect_min_size = Vector2( 600, 600 )
rect_pivot_offset = Vector2( 300, 300 )
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0
popup_exclusive = true
script = ExtResource( 12 )
radius = 300
width = 200
center_radius = 100
circle_coverage = 1.0
center_angle = -1.5
icon_scale = 0.4
default_theme = ExtResource( 13 )

[node name="Disposables" type="Node" parent="."]

[node name="RevealTimer" type="Timer" parent="."]

[node name="PostRevealTimer" type="Timer" parent="."]

[node name="CanvasLayer" parent="." instance=ExtResource( 1 )]

[connection signal="pressed" from="StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="NextRoundButton" to="." method="_on_NextRoundButton_pressed"]
[connection signal="pressed" from="NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="item_selected" from="PlayerHandMenu" to="." method="_on_PlayerHandMenu_item_selected"]
[connection signal="mouse_entered" from="PlayerHandMenu" to="." method="_on_PlayerHandMenu_mouse_entered"]
[connection signal="mouse_exited" from="PlayerHandMenu" to="." method="_on_PlayerHandMenu_mouse_exited"]
[connection signal="timeout" from="RevealTimer" to="." method="_on_RevealTimer_timeout"]
[connection signal="timeout" from="PostRevealTimer" to="." method="_on_PostRevealTimer_timeout"]

[editable path="Control"]
